Moving tests to 'test' dir and dotnet-core csproj/json to 'dotnet-core' dir

--- a/dotnet/dotnet-core/dotnet-core.csproj
+++ b/dotnet/dotnet-core/dotnet-core.csproj
@@ -88,8 +88,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="IBootstrapper.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="TestDotnetCommandDiscovery.cs" />
+    <Compile Include="test\TestDotnetCommandDiscovery.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
