--- a/dotnet/dotnet.csproj
+++ b/dotnet/dotnet.csproj
@@ -82,8 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="IBootstrapper.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="TestDotnetCommandDiscovery.cs" />
+    <Compile Include="test\TestDotnetCommandDiscovery.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
