--- a/src/Microsoft.DotNet.Tools.DependencyResolver/project.json
+++ b/src/Microsoft.DotNet.Tools.DependencyResolver/project.json
@@ -10,6 +10,7 @@
 
         "Microsoft.CSharp": "4.0.0-beta-23109",
         "Microsoft.Framework.CommandLineUtils.Sources": "1.0.0-*",
+        "Microsoft.DotNet.ProjectModel": {"target":  "project"},
         
         "NuGet.Frameworks": "3.2.0",
 
