--- a/dotnet/dotnet-core/project.json
+++ b/dotnet/dotnet-core/project.json
@@ -1,9 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NetCore.Console": "1.0.0-beta-23321",
-    "System.IO.Compression": "4.0.1-beta-23321",
-    "Newtonsoft.Json": "7.0.1",
-    "xunit": "2.1.0"
+    "Microsoft.NETCore.Console": "1.0.0-beta-23406", 
+    "Autofac": "4.0.0-beta7-*"
   },
   "frameworks": {
     "dnxcore50": {}
