--- a/src/Microsoft.DotNet.Tools.Compiler/project.json
+++ b/src/Microsoft.DotNet.Tools.Compiler/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "dotnet-compile",
   "version": "1.0.0-*",
   "compilationOptions": {
@@ -19,9 +19,10 @@
       "version": "1.0.0-*"
     },
     "Microsoft.Extensions.CommandLineUtils.Sources": {
-      "type": "build",
-      "version": "1.0.0-*"
-    }
+        "type": "build",
+        "version": "1.0.0-*"
+    },
+    "Newtonsoft.Json": "7.0.1"
   },
   "frameworks": {
     "dnxcore50": { }
