--- a/scripts/dotnet-cli-build/project.json
+++ b/scripts/dotnet-cli-build/project.json
@@ -7,6 +7,7 @@
 
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23728",
+        "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-*",
         "Microsoft.DotNet.Cli.Build.Framework": { "target": "project" }
     },
 
